# ChangeLog for dev-java/openjdk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  Add DEPEND on app-arch/unzip  and app-arch/zip.

  20 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild, +files/external-giflib.patch,
  +files/external-jpeg-splash.patch, +files/external-libpng.patch:
  Use the system installed copy of libpng instead of the bundled one.

  15 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  Remove the need for dev-java/ant by running make directly.

  13 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  Fix GPL-2-with-classpath-exception to GPL-2-with-linking-exception

  13 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild, +files/external-zlib.patch,
  +files/j2se-cxxflags.patch:
  Use system installed copy of zlib.

  10 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild, +files/lesstif.patch:
  Add patch to build against lesstif.

  10 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  dev-libs/elfutils and media-libs/jpeg are not needed. Reasons in comments.
  Don't strip binaries.

  10 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  Work around argument list getting too long by renaming openjdk to o and
  don't RESTRICT stripping any more.

  09 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  Add DEPENDs gotten from included_headers.sh and fix src_install for amd64.

  09 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  Add libraries OpenJDK links against and don't RDEPEND on ant-core, sun-jdk,
  virtual/jdk or motif.

  09 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild: