@@ -6,5 +6,5 @@ AUX j2se-cxxflags.patch 459 RMD160 9fff2fec4168e545cb9b2e7fb359de0348e46123 SHA1
 AUX lesstif.patch 661 RMD160 f5c54c68ac6b9156084e4345d27f4e1dbb107e20 SHA1 bde69ef892e39986c5f45281b6aef32cd8c55223 SHA256 e33bf75f24f99ffe66d0ffe0da19b79f2bd44991badc02abfb42147099153e69
 AUX openjdk-1.7.env 795 RMD160 04795b3f0657ec25164f26c984878ca31f199fe1 SHA1 d508647c5d49e907afa9d49fc0ce82584209d612 SHA256 3c01c3ef3c40171143791c8ff813a705d15b446ef5b316fe78a5d275a0170da6
 DIST openjdk-7-ea-src-b12-06_may_2007.zip 81838731 RMD160 21741c6428a64b6e48104f87d84d3fadd13ff23b SHA1 56ddeb5fd740d9897fb8a5565ed33b60297a4bb2 SHA256 16309aa80f2b1d82cb256c64491c561fd83fc7a7ccbfcb066684ab896c8131cc
-EBUILD openjdk-1.7.0.0_alpha12.ebuild 5573 RMD160 afe5d7b261ea0180061aa066633f6ef0fcf8eb7e SHA1 44cb116c11a2f8341af4db4149d316f14830d6f2 SHA256 734627f30b065942f317713074e9e560ab3fc9ff1b68b88f5e7184a6f3cb1b8e
-MISC ChangeLog 2337 RMD160 95fa2a1b1a738c7224db30adccb63b2766edb1e4 SHA1 2902e0add70d85e924fa144b530bc29144c33e58 SHA256 cd0acacb75343f797271b61792c138103bb06387f20b3273b961d11e8e091353
+EBUILD openjdk-1.7.0.0_alpha12.ebuild 6057 RMD160 343895673167f8e27c164a66be8acf0e55550449 SHA1 7c53d052e051828070f90f46c3291a0b8389fa78 SHA256 a8a1a7ebc465e85d8197200db45da2da9788c9dc588e38272c6f4ebb9c952ec5
+MISC ChangeLog 2534 RMD160 0842fe75544b683459eede85431181fb5528d848 SHA1 643259462eb3f8979ef95264601c1e3dc6305ab4 SHA256 a0ade4eae7abb529dca5fb5a8fcce854b505cc3dda07767679462ea8da6a555a
